2003-04-13  Pierre Humblet  <pierre.humblet@ieee.org>

	* mkvers.sh: Prefix day with 0 in date only when day < 10.

2003-04-11  Pierre Humblet  <pierre.humblet@ieee.org>

	* security.cc (get_info_from_sd): New function.
	(get_nt_attribute): Only call read_sd and get_info_from_sd.
	Return void.
	(get_file_attribute): Move sd error handling to get_info_from_sd.
	and symlink handling to fhandler_disk_file::fstat_helper.
	(get_nt_object_attribute): Only call read_sd and get_info_from_sd.
	Return void.
	(get_object_attribute): Remove symlink handling and simply return -1
	when ntsec is off.
	* fhandler_disk_file.cc (fhandler_disk_file::fstat_helper): For
	symlinks set the attribute, call get_file_attribute to get the ids
	and return.  In the normal case call get_file_attribute with the
	addresses of the buffer ids and do not recheck if the file is a socket.

2003-04-10  Christopher Faylor  <cgf@redhat.com>

	* cygthread.cc (cygthread::stub): Initialize stack pointer earlier.
	(cygthread::simplestub): Initialize stack pointer.
	(cygthread::terminate_thread): Account for possibility that stack
	pointer has not been set.  Issue warnings for unusual conditions.

2003-04-10  Corinna Vinschen  <corinna@vinschen.de>

	* regex/regex.h: Define regoff_t as _off_t.
	* regex/regex2.h: Ditto.

2003-04-10  Corinna Vinschen  <corinna@vinschen.de>

	* cygwin.din: Export wcscoll, wcswidth and wcwidth.
	* include/cygwin/version.h: Bump API minor number.

2003-04-10  Christopher Faylor  <cgf@redhat.com>

	* cygthread.h: Change 'avail' cygthread element to 'inuse' throughout.
	* cygthread.cc: Ditto.
	(cygthread::stub): Don't initialize already initialized events.
	(cygthread::freerange): Don't create thread here.
	(cygthread::cygthread): Create thread here.  Die if thread not created.
	(cygthread::operator new): Simplify.  Just grab a thread structure from
	the pool.  Don't try to start the thread.
	(cygthread::terminate_thread): Don't close event handles.  Just reuse